crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__assign_expr-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: invalid variable declaration
[34m>[0m code:1
[34m|[0m 
[34m|[0m [31;4ma.b :=[0m c
[34m|[0m 


