crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__binary_expr-13.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Binary(
    Binary {
        op: And,
        left: GetVar(
            GetVar {
                name: "a",
            },
        ),
        right: GetVar(
            GetVar {
                name: "b",
            },
        ),
    },
)
