crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__call_expr-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: expected `=`
[34m>[0m code:1
[34m|[0m 
[34m|[0m a(b=c, d[31;4m)[0m
[34m|[0m 


