crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__call_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Call(
    Call {
        target: GetVar(
            GetVar {
                name: "a",
            },
        ),
        args: Args {
            pos: [
                GetVar(
                    GetVar {
                        name: "b",
                    },
                ),
                GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            ],
            kw: [
                (
                    "d",
                    GetVar(
                        GetVar {
                            name: "e",
                        },
                    ),
                ),
                (
                    "f",
                    GetVar(
                        GetVar {
                            name: "g",
                        },
                    ),
                ),
            ],
        },
    },
)
